fixed edit donation mobile

--- a/src/components/Donation/Donation.css
+++ b/src/components/Donation/Donation.css
@@ -1,5 +1,6 @@
 div.donation-wrapper {
-  margin: 10px;
+  height: 100%;
+  margin: 50px 10px;
   background: white;
   box-shadow: 2px 2px 6px 0 rgba(41, 2, 80, 0.1);
   border-radius: 10px;
