--- a/src/components/EditDonation/EditDonation.css
+++ b/src/components/EditDonation/EditDonation.css
@@ -1,9 +1,13 @@
 div.editdonation-wrapper {
   height: 100%;
-  width: 80%;
-  margin: 30px auto;
-  padding: 20px;
-  background-color: white;
+  padding-bottom: 100px;
+}
+
+section.editdonation-section {
+  margin: 10px;
+  background: white;
+  padding: 10px;
+  box-shadow: 2px 2px 6px 0 rgba(41, 2, 80, 0.1);
   border-radius: 10px;
 }
 
@@ -12,10 +16,29 @@ div.editdonation-image {
 }
 
 img.edit-image {
-  max-width: 500px;
-  max-height: 500px;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 5px;
 }
 
 input.edit-input {
   background: #edebeb;
+}
+
+@media all and (min-width: 600px) {
+  img.edit-image {
+    max-width: 500px;
+    max-height: 500px;
+    padding: 5px;
+  }
+
+  div.editdonation-wrapper {
+    margin-right: 10%;
+    margin-left: 10%;
+    padding: 30px;
+  }
+
+  section.editdonation-section {
+    padding: 20px;
+  }
 }
